# fox-glove-sdk

./: README.md  v1.yaml
client-example/: .env.example  Cargo.toml  USAGE.md
client-example/examples/: coverage_client.rs
client-example/src/: main.rs
sdk/: Cargo.toml  README.md  reference.md
sdk/dynamic-snippets/: example0.rs  example10.rs  example100.rs  example13.rs  example14.rs  example16.rs  example18.rs  example20.rs  example23.rs  example24.rs  example25.rs  example28.rs  example3.rs  example30.rs  example31.rs  example33.rs  example35.rs  example38.rs  example40.rs  example42.rs  example43.rs  example45.rs  example47.rs  example49.rs  example5.rs  example51.rs  example54.rs  example55.rs  example58.rs  example6.rs  example60.rs  example61.rs  example62.rs  example64.rs  example66.rs  example68.rs  example69.rs  example71.rs  example74.rs  example76.rs  (+12 more)
sdk/src/: client.rs  client_error.rs  environment.rs  error.rs  http_client.rs  lib.rs  prelude.rs
sdk/src/api/: mod.rs
sdk/src/client/: coverage.rs  custom_properties.rs  device_tokens.rs  devices.rs  events.rs  extensions.rs  imports.rs  lake_files.rs  layouts.rs  mod.rs  recording_attachments.rs  recordings.rs  site_inbox_notification_tokens.rs  site_tokens.rs  sites.rs  stream_data.rs  topics.rs
sdk/src/types/: coverage.rs  custom_properties_delete_custom_properties_id_response.rs  custom_property.rs  delete_custom_properties_id_response.rs  delete_data_imports_import_id_response.rs  delete_data_imports_response.rs  delete_data_imports_response_deletion_results_item.rs  delete_sites_id_response.rs  (+67 more)
(+132 files in other folders)
