[package]
name = "foxglove-client-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# Foxglove Rust SDK (local path)
foxglove = { path = "../sdk" }
# Or if published to crates.io:
# foxglove = "0.0.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# JSON handling
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (if not included in SDK)
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Optional: logging
log = "0.4"
env_logger = "0.10"

# Environment variables
dotenv = "0.15"

# CLI interface (optional)
clap = { version = "4.0", features = ["derive"] }